--- a/_config.yml
+++ b/_config.yml
@@ -3,21 +3,21 @@ cloudcannon:
 plugins:
   - jekyll-sitemap
   - jekyll-feed
-  - jekyll-responsive-image
+  # - jekyll-responsive-image
   - jekyll-archives
   - jekyll-webp
 
 # Configuration of the jekyll-responsive-image plugin
-responsive_image:
-  template: _includes/templates/image-tag.html
-  sizes:
-    - width: 360
-    - width: 480
-    - width: 600
-    - width: 800
-    - width: 1400
-  base_path: assets/images
-  output_path_format: assets/images/srcset/%{width}/%{basename}
+# responsive_image:
+#   template: _includes/templates/image-tag.html
+#   sizes:
+#     - width: 360
+#     - width: 480
+#     - width: 600
+#     - width: 800
+#     - width: 1400
+#   base_path: assets/images
+#   output_path_format: assets/images/srcset/%{width}/%{basename}
 
 
 # Site configuration for the WebP Generator Plugin
